--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/*Public Part*/
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +11,8 @@ body {
 li {
     list-style: none;
 }
+
+/*Public Header Part*/
 header {  
     position: fixed;
     width: 100%;
@@ -32,9 +35,16 @@ header {
      cursor: pointer;
    
  }
+ .menu-icon{
+     display: none;
+     float: right;
+     height: 45px;
+     width: 45px;
+     padding-top: 10px;
+ }
  
 
- 
+/*Public Content One Part*/
  .content-one{
      width: 100% !important;
      height: 670px;
@@ -74,12 +84,148 @@ header {
      justify-content: center;
  }
  
-
+/*Public Content Two Part*/
+ .content-two-title{
+     text-align: center;
+     font-weight: normal;
+     letter-spacing: 3px;
+     padding: 50px 0px 0px 0px;
+ }
  
  .content-two{
-     background-color:white;
-    color: white;
+     background-color:#ececec;
+     width: 100%;
+ }
+
+ .profile-panel-wrapper{
+     width: 100%;
+     text-align: center;
+     margin-top: 10px;
+     padding-bottom: 20px;
+ }
+ .profile-panel{
+    vertical-align: top;
+     display: inline-block;
+     background-color: white;
+     height: 300px;
+     width: 250px;
+     border-radius: 20px;
+     margin: 20px 1%;
+     box-shadow: 3px 3px 3px grey;
+ }
+
+ .user-icon{
+     width: 100px;
+     height: 100px;
+     margin-top: 25px;
+ }
+
+ .user-name{
+    display: flex; 
+    flex-direction: column;
+     text-align: center;
+     font-weight: normal;
+     margin: 15px 5px 0px 5px;
+ }
+
+ .user-desc{
+    display: flex; 
+     flex-direction: column;
+      margin: 10px 10px 5px 10px;
+       height: 80px;
+ }
+
+ .user-id{
+    display: flex; 
+    flex-direction: column;
+    font-size: 15px;
+    font-weight: 500;
+    opacity: 0.7;
+    margin: 0px 5px 0px 5px;
+    height: 20px;
+ }
+
+ /*Public Content Three Part*/
+ .content-three{
+     background-color: #f8f8f8;
+     width: 100%;
+ }
+
+ .like-content-wrapper{
+    width: 100%;
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+ .like-content{
+     vertical-align: top;
+    display: inline-block;
+    height: 200px;
+    width: 300px;
+
+    margin: 20px 3% 0px 3%;
+ }
+
+ .like-text{
+     margin-top: 75px;
+     font-weight: normal;
+     letter-spacing: 3px;
+ }
+
+ .thumb{
+     height: 150px;
+     width: 150px;
+     margin-top: 25px;
+     transition: all 1.5s;
+     opacity: 0;
+     z-index: -1;
+ }
+ 
+ .like-button{
+     color: white;
+     padding: 10px 0;
+     width: 70%;
+     font-weight: 500;
+     letter-spacing: 3px;
+     margin: 70px auto 0px auto;
+     border-radius: 10px;
+     background-color: #5dca88;
+     cursor: pointer;
+     box-shadow: 0 7px 7px #1a7940;
+ }
+
+ .like-button:active {
+    position: relative;
+    top: 7px;
+    box-shadow: none;
+  }
+
+  .one{
+    margin-top: 75px;
+      transition: all 1.5s;
+      z-index: 1;
+  }
+
+  .two{
+    margin-top: 95px;
+      display: none;
+    transition: all 1.5s;
+    z-index: -1;
+  }
+
+/*Public Footer Part*/
+footer {  
+    width: 100%;
+     background-color: rgba(30, 39, 40, 0.9);
+     height: 65px;
+     color: white;
+ }
+
+ .footer-logo{
+     font-weight: normal;
+     letter-spacing: 1px;
+     padding: 20px 20px;
  }
 
 @media screen and (min-width:1001px){
@@ -165,5 +311,20 @@ header {
     
     .content-one-lorem p{
         padding: 0px 20px 40px 20px; 
+    }
+
+    .header-menu li{
+       display: none;
+      
+    }
+    .menu-icon{
+        display: block;
+    }
+
+    .footer-logo{
+        text-align: center;
+        font-weight: normal;
+        letter-spacing: 1px;
+        padding: 20px 20px;
     }
 }
