--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,8 +300,8 @@ footer {
     .content-one-lorem{
         text-align: center;
         margin: 115px auto 0px auto;
-        height: 450px;
-        width: 400px;
+      height: 470px;
+        width: 95%;
     }
     
     .content-one-lorem h1{
