--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,8 +300,8 @@ footer {
     .content-one-lorem{
         text-align: center;
         margin: 115px auto 0px auto;
-      height: 470px;
-        width: 95%;
+        height: 450px;
+        width: 300px;
     }
     
     .content-one-lorem h1{
